metopia-co/metopia-co-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metopia-co
  namespace: metopia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metopia-co
  template:
    metadata:
      labels:
        app: metopia-co
    spec:
      containers:
        - name: metopia-co
          image: 'ghcr.io/meta-metopia/metopia-co:v1.0.26'
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "300Mi"
              cpu: "200m"
          ports:
            - name: server-port
              containerPort: 3000
              protocol: TCP
      restartPolicy: Always
