metopia-co/metopia-co-service.yml
apiVersion: v1
kind: Service
metadata:
  name: metopia-co-service
  namespace: metopia
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: metopia-co
